--- a/pages/product.html
+++ b/pages/product.html
@@ -8,35 +8,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rain jackets for adventurous individuals">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="js/main.js" defer type="module"></script>
-    <title>Rainy Days - Home</title>
+    <link rel="stylesheet" type="text/css" href="../css/product.css">
+    <title>Single Product Page</title>
+    <script src="../js/product.js" defer type="module"></script>
 </head>
-
+<body>
 <nav>
-    <!--    <a href="../index.html">Home</a>-->
+    <a href="../index.html">Home</a>
     <button type="button" id="shopping-bag-btn" class="shopping-bag-btn">
-        <img class="bag-icon" src="./assets/images/svgs/shoopingbags.svg"/>
+        <img src="../assets/images/svgs/shoopingbags.svg"/>
     </button>
     <div id="shopping-bag">
 
     </div>
 </nav>
 
-<body>
-
-<select id="filter-list">
-    <option value="default" disabled selected>Select your gender</option>
-    <option value="show-all">Show all</option>
-    <option value="Female">Women's</option>
-    <option value="Male">Men's</option>
-
-</select>
-
 <div id="loader">
-    <h3>...loading</h3>
+    ...Loading
 </div>
-<div id="jacket-list"></div>
+<div id="single-product">
+
+</div>
+
+<div class="add-to-cart-div">
+    <select id="size-selector" required>
+        <option value="default" disabled selected>Select your size:</option>
+    </select>
+    <button class="add-to-cart-btn">
+        Add to cart
+    </button>
+</div>
 
 </body>
 </html>
