finished cart, debugged a lot. Probably should have branched more. Pretty much finished. Needs CSS and some fine tuning :)

--- a/pages/collection.html
+++ b/pages/collection.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <script src="../js/shoppingBag.js" type="module" defer></script>
-    <title>Cart?</title>
+    <title>Checkout</title>
 </head>
 <body>
+
+
 
 </body>
 </html>
