--- a/pages/product.html
+++ b/pages/product.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Rain jackets for adventurous individuals">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/product.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <title>Single Product Page</title>
     <script src="../js/product.js" defer type="module"></script>
 </head>
@@ -16,9 +17,9 @@
 <nav>
     <a href="../index.html">Home</a>
     <button type="button" id="shopping-bag-btn" class="shopping-bag-btn">
-        <img src="../assets/images/svgs/shoopingbags.svg"/>
+        <img class="bag-icon" src="../assets/images/svgs/shoopingbags.svg"/>
     </button>
-    <div id="shopping-bag">
+    <div id="shopping-bag" class="shopping-bag-scrollable shopping-bag-fixed">
 
     </div>
 </nav>
