--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="description" content="Rain jackets for adventurous individuals">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script src="js/main.js" defer type="module"></script>
+    <link rel="stylesheet" type="text/css" href="css/navbar.css">
+    <script src="js/main.js" type="module" defer></script>
+
     <title>Rainy Days - Home</title>
 </head>
 
