--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Kannada:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rain jackets for adventurous individuals">
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/checkout.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <script src="../js/checkout.js" defer type="module"></script>
     <title>Checkout</title>
 </head>
+
+<header>
+    <nav>
+        <a href="../index.html">Home</a>
+        <button type="button" id="shopping-bag-btn" class="shopping-bag-btn">
+            <img class="bag-icon" src="../assets/images/svgs/shoopingbags.svg"/>
+        </button>
+        <div id="shopping-bag" class="shopping-bag-scrollable shopping-bag-fixed">
+
+        </div>
+    </nav>
+</header>
+
 <body>
+
+<div id="checkout-info">
+    Checkout information
+    <form>
+        <h2>
+            Payment details:
+        </h2>
+        <label for="your-name">Name</label>
+        <input type="text" id="your-name" name="your-name" placeholder="Name:">
+        <label for="payment-card">Card number:</label>
+        <input type="text" minlength="16" maxlength="16" id="payment-card" name="payment-card" placeholder="0000 0000 0000 0000">
+        <br/>
+        <div class="exp/cvc">
+            <div class="expiration-date">
+                <label for="expiry">Expiration Date:</label>
+                <input class="inputCard" name="expiry" id="expiry" type="text" required placeholder="00/00">
+                <br/>
+            </div>
+            <div class="cvc-number">
+                <label for="cvc">CVC:</label>
+                <input type="text" minlength="3" maxlength="3" id="cvc" name="cvc" placeholder="XXX">
+            </div>
+        </div>
+        <button type="submit" id="checkout-submit-btn">Submit</button>
+    </form>
+</div>
+
+<div id="checkout-items-list">
+    Checkout items
+</div>
 
 </body>
 </html>
