--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <nav>
-    <!--    <a href="../index.html">Home</a>-->
+    <a href="index.html">Home</a>
     <button type="button" id="shopping-bag-btn" class="shopping-bag-btn">
         <img class="bag-icon" src="./assets/images/svgs/shoopingbags.svg"/>
     </button>
-    <div id="shopping-bag">
+    <div id="shopping-bag" class="shopping-bag-scrollable shopping-bag-fixed">
 
     </div>
 </nav>
@@ -32,7 +32,6 @@
     <option value="show-all">Show all</option>
     <option value="Female">Women's</option>
     <option value="Male">Men's</option>
-
 </select>
 
 <div id="loader">
