--- a/pages/checkoutSuccess.html
+++ b/pages/checkoutSuccess.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Kannada:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rain jackets for adventurous individuals">
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/checkOutSuccess.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <script src="../js/checkOutSuccess.js" type="module" defer></script>
     <title>Checkout is a success!</title>
 </head>
 <body>
-<h1>
-   Success!
-</h1>
+<nav>
+    <a href="../index.html">Home</a>
+    <button type="button" id="shopping-bag-btn" class="shopping-bag-btn">
+        <img class="bag-icon" src="../assets/images/svgs/shoopingbags.svg"/>
+    </button>
+    <div id="shopping-bag" class="shopping-bag-scrollable shopping-bag-fixed">
+        Your shopping bag is empty.
+    </div>
+</nav>
+<main>
+    <img src="../assets/images/svgs/checkoutsvg.svg" alt="Two people high-fiving" class="success-img">
+    <h1>
+        Your order was successfully placed!
+    </h1>
+    <button id="continue-shopping-btn">Continue shopping</button>
+</main>
 </body>
 </html>
