--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -33,22 +33,15 @@
         <h2>
             Payment details:
         </h2>
-        <label for="your-name">Name</label>
+        <label for="your-name">Name:</label>
         <input type="text" id="your-name" name="your-name" placeholder="Name:">
         <label for="payment-card">Card number:</label>
-        <input type="text" minlength="16" maxlength="16" id="payment-card" name="payment-card" placeholder="0000 0000 0000 0000">
-        <br/>
-        <div class="exp/cvc">
-            <div class="expiration-date">
-                <label for="expiry">Expiration Date:</label>
-                <input class="inputCard" name="expiry" id="expiry" type="text" required placeholder="00/00">
-                <br/>
-            </div>
-            <div class="cvc-number">
-                <label for="cvc">CVC:</label>
-                <input type="text" minlength="3" maxlength="3" id="cvc" name="cvc" placeholder="XXX">
-            </div>
-        </div>
+        <input type="text" minlength="16" maxlength="16" id="payment-card" name="payment-card"
+               placeholder="0000 0000 0000 0000">
+        <label for="expiry">Expiration Date:</label>
+        <input class="inputCard" name="expiry" id="expiry" type="text" required placeholder="00/00">
+        <label for="cvc">CVC:</label>
+        <input type="text" minlength="3" maxlength="3" id="cvc" name="cvc" placeholder="XXX">
         <button type="submit" id="checkout-submit-btn">Submit</button>
     </form>
     <div id="checkout-items-list">
